Use correct font-family's and correct spacing between columns in the table

--- a/packages/ui-extensions-dev-console/src/components/Button/Button.module.scss
+++ b/packages/ui-extensions-dev-console/src/components/Button/Button.module.scss
@@ -4,7 +4,6 @@
   padding: 0.3rem 0.8rem;
 
   line-height: 2rem;
-  font-family: var(--dc-font-pro);
   font-weight: var(--dc-font-weight-500);
 
   background: var(--dc-color-grey-700);
