--- a/packages/ui-extensions-dev-console/src/sections/Extensions/Extensions.module.scss
+++ b/packages/ui-extensions-dev-console/src/sections/Extensions/Extensions.module.scss
@@ -3,8 +3,6 @@
   height: 5.6rem;
   padding: 2.2rem 1.8rem 1.5rem;
   line-height: 1.6rem;
-  font-family: var(--dc-font-pro);
-  font-size: 1.4rem;
   color: 1px solid var(--dc-color-grey-100);
 }
 
