--- a/packages/ui-extensions-dev-console/src/sections/Extensions/components/PreviewLink/PreviewLink.module.scss
+++ b/packages/ui-extensions-dev-console/src/sections/Extensions/components/PreviewLink/PreviewLink.module.scss
@@ -1,7 +1,3 @@
-.NotApplicable {
-  font-family: var(--dc-font-compact);
-}
-
 .PreviewLinksTitle {
   font-style: italic;
 }
