--- a/packages/ui-extensions-dev-console/src/sections/Extensions/components/QRCodeModal/QRCodeModal.module.scss
+++ b/packages/ui-extensions-dev-console/src/sections/Extensions/components/QRCodeModal/QRCodeModal.module.scss
@@ -26,6 +26,5 @@
 }
 
 .CopyLink {
-   font-family: var(--dc-font);
    text-align: left;
  }
